# powerExcelMCP

./: .gitignore  pyproject.toml
src/excel_mcp/: __main__.py  calculations.py  code_runner.py  data.py  data_handlers.py  new_server.py  server.py  test.py
