[project]
name = "excel-mcp-server"
version = "0.1.0"
description = "MCP server for Excel file manipulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cpca>=0.5.5",
    "dask[complete]>=2025.3.0",
    "matplotlib>=3.10.1",
    "mcp[cli]>=1.2.0",
    "modin>=0.32.0",
    "openpyxl>=3.1.2",
    "pandas>=2.2.3",
    "python-calamine>=0.3.1",
    "setuptools>=78.1.0",
    "statsmodels>=0.14.4",
]
[[project.authors]]
name = "haris"
email = "haris.musa@outlook.com"

[[project.authors]]
name = "KonghaYao"
email = "3446798488@qq.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
excel-mcp-server = "excel_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_mcp"]

[tool.hatch.build]
packages = ["src/excel_mcp"]

[[tool.uv.index]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
priority = "primary"
